--- a/introduction/fak.tex
+++ b/introduction/fak.tex
@@ -12,7 +12,7 @@ The FAT domain is linked to the kinase by a flexible proline-rich region. FAT ta
 \begin{figure}
 	\centering
 	\includegraphics[height=6cm]{figures/introduction/fak}
-	\captionof{figure}{Focal adhesion kinase with the FERM domain (left) and the kinase (right). The basic patch inside F2 (light blue) and \acid{Y}{397} bound to F1 (light green) as well as \acid{Y}{576} and \acid{Y}{577} in the kinase are highlighted.}
+	\nicecaption{Structure of FAK}{FERM domain consiting of F1 (green), F2 (iceblue) and F3 (blue) connected via the linker to the kinase consisting of N-lobe (violet), the activation loop (black) and the C-lobe (red). The basic patch (bottom), \acid{Y}{397} (top) and \acid{Y}{567}, \acid{Y}{577} (activation loop) are highlighted.}
 	\label{intro:fak}
 \end{figure}
 %
