--- a/results/multiProtInteractions.tex
+++ b/results/multiProtInteractions.tex
@@ -44,7 +44,7 @@ As one can see in the plots FK-Chains do not have an influence upon the CA. Also
 \begin{figure}
 	\centering
 	\includegraphics[height=6cm]{figures/results/fk_ca}
-	\captionof{figure}{Analysis of the FERM-kinase interface in FK-Chains. The blue line was obtained from FAK-SOL.}
+	\captionof{figure}{Analysis of the FERM-kinase interface in FK-Chains. The blue line was obtained from FAK-MEM.}
 	\label{mult:fk_ca}
 \end{figure}
 %
@@ -57,7 +57,7 @@ As one can see in the plots FK-Chains do not have an influence upon the CA. Also
 \begin{figure}
 	\centering
 	\includegraphics[height=6cm]{figures/results/ff_ca}
-	\captionof{figure}{Analysis of the FERM-kinase interface in FFKK-Chains. The blue line was obtained from FAK-SOL.}
+	\captionof{figure}{Analysis of the FERM-kinase interface in FFKK-Chains. The blue line was obtained from FAK-MEM.}
 	\label{mult:ff_ca}
 \end{figure}
 %
