--- a/introduction/characterisation.tex
+++ b/introduction/characterisation.tex
@@ -1,7 +1,7 @@
 \subsection{Intromolecular}
 The interface of the FERM domain and the kinase is of special interest since the domains have to dissociate for a full activation. Therefore contacts and contact areas at the interface are investigated using the following methods.\\
 \subsubsection{ConAn}
-ConAn is a completely, bug free, user friendly and well documented tool to analyze the distances between all residue pairs in a molecule. It is great, believe me, and totally works out of the box. \textit{Some explanation about Contact maps? But should be self explaining :D}
+404 Section not found. Please come back later...
 \subsubsection{Contact area}
 The contact area of the interface is determined with the solvent accessible surface area (SASA) and is defined as
 \begin{equation}
