--- a/results/umbrella.tex
+++ b/results/umbrella.tex
@@ -1,19 +1,19 @@
 \subsection{Free energy profile of basic patch}
 \label{results:umbrella}
-In the context of the investigation of FAK falling the free energy profile of the basic patch in F2 was investigated. Because this might be of interest for other applications as well, a short report on the obtained results is given at this point. The used setup is setup 2 described in \autoref{setup:setup2}.\\
-The average profile of the five copies together with the standard deviation for the forcefields C36, Martini and Martini with PW can be found in \autoref{umbrella:profiles}. Here the range between $z = 6\,\si{\nano\metre}$ and $z = 7\,\si{\nano\metre}$ was defined as zero point.\\
-C36 and Martini show both a similar energy depth of $A \approx 17 \si{\kilo\joule/\mole}$ and the same slope between $z = 3\,\si{\nano\metre}$ and $z = 4\,\si{\nano\metre}$. Certainly Martini results in larger values for the free energy, which could originate from an underestimation of electrostatic forces due to the unpolar water beads (see \autoref{subsub:coarsegraining}). For values above $z = 4\,\si{\nano\metre}$ the free energy profile flattens out in C36 while a kink can be observed in Martini. This is due to the different treatment of long range electrostatics: Martini uses a cut off radius, C36 uses PME.\\
-Also Martini with PW uses PME for long range electrostatic interactions and indeed it fits much better to the C36 profile for larger distances. However the binding strength is crucially underestimated in Martini with PW.\\
-It is remarkable, in which extent the Martini force field redraws the results from all-atom simulations. A contribution to this might be, that the parameters for Martini were obtained a.o. from free energy calculations and measurements (see \autoref{subsub:coarsegraining}).\\
+In order to understand the falling of FAK onto the membrane the free energy profile of the basic patch \pip{} was investigated. Since this binding is the main contact between FAK and the membrane in our model, a short report on the results is given at this point.\\
+The profiles are obtained from setup 2. The reaction coordinate is the z component of the COM distance between \pip{} and the protein fragment. For each forcefield, C36, \martini{} and \martini{} with PW, the average profile out of the five copies together with the standard deviation can be found in \autoref{umbrella:profiles}. The range $6\,\si{\nano\metre} \le z \le 7\,\si{\nano\metre}$ was set as zero point.
+Both, C36 and \martini{}, show a similar energy depth of $\approx 17 \si{\kilo\joule/\mole}$ and a similar slope between $3\,\si{\nano\metre} \le z \le 4\,\si{\nano\metre}$ . Certainly, \martini{} shows systematically larger values than the all atom simulation. This can be attributed to the proposed underestimation of electrostatic forces due to the unpolar water beads (see \autoref{subsub:coarsegraining}). The difference at $z = 4.2\,\si{\nano\metre}$ originates from the different treatment of long range electrostatics: \martini{} uses a cut-off radius, C36 uses PME.\\ %TODO: kink in C36? Due to short range?
+Also \martini{} with PW uses PME for long range electrostatic interactions and indeed it fits much better to the C36 profile for larger distances. However the binding strength is crucially underestimated in Martini with PW.\\
+The extent to which \martini{} reproduces the results from all-atom simulations is remarkable, even though the parameters for \martini{} were obtained a.o. from free energy calculations (see \autoref{subsub:coarsegraining})\\
 \\
-In the used starting configurations the proteins are already bound to \pip{}. Therefore a correct binding strength and the shape near the minimum is of larger interest than a correct sampling of further distances. In addition Martini with PW showed a much higher computational cost. That is why in the following simulations only Martini has been considered.
+In the used starting configurations, the proteins are already bound to \pip{}. Therefore a correct binding strength and the shape near the minimum is of larger interest than a correct sampling of farther distances. In addition \martini{} with PW required a much higher computational effort. That is why in the following simulations only \martini{} with the standard water model is considered.
 %
 %
 %
 \begin{figure}
 	\centering
 	\includegraphics[width=.8\textwidth]{figures/results/umbrella}
-	\captionof{figure}{Free energy profiles of basic patch in different force fields}
+	\nicecaption{Free energy profile of basic patch}{For each forcefield the average and standard deviation of the five copies is presented.}
 	\label{umbrella:profiles}
 \end{figure}
 %
