--- a/introduction/motivation.tex
+++ b/introduction/motivation.tex
@@ -5,7 +5,7 @@ However previous work in the group \autocite{sara} obtained difficulties in the 
 \begin{equation}
 \cos\left(\beta\right) = \frac{\vec{d}_{F, z}}{d_F},\quad d_F = \left|\vec{d}_F\right|
 \end{equation}
-\textcite{sara} simulated five different copies for $10\,\si{\micro\second}$ each. The resulting distributions of the angle can be seen in \autoref{motiv:sarascurves}. Exemplary the red line shows a mean value of $90\,\si{\deg}$, which is what meant with a falling of FAK in the following part. The angle changed in less than XXX and stayed constant for the remaining simulation time.\\
+\textcite{sara} simulated five different copies for $10\,\si{\micro\second}$ each. The resulting distributions of the angle can be seen in \autoref{motiv:sarascurves}. Exemplary the red line shows a mean value of $90\,\si{\deg}$, which is what meant with a falling of FAK in the following part. The angle changed in less than $50\,\si{\nano\second}$ and stayed constant for the remaining simulation time.\\
 There are several reasons why this is rather an artefact of the Martini force field than a possible binding pose of FAK to the membrane as suggested by \textcite{pap002}. The first one is, that FAK falls to both extensive sites, which means that the key residues for an interaction of the extensive site of the kinase with the membrane proposed by \textcite{pap002} are located on top of the FAK and not on the side of the membrane. Indeed contact analysis showed, that virtually all residues on the surface (in both, FERM domain and kinase) were interacting with the membrane. Another one is, that this behaviour was not observed in equivalent all atom simulations in C36 ($1.5\,\si{\micro\second}$ in total). Here only two maxima were observed around $8\,\si{\deg}$ and around $20\,\si{\deg}$, the largest observed angle was $40\,\si{\deg}$.\\
 \\
 In the course of this project several experiments were made to understand the cause of this falling, e. g. to review the binding of the basic patch in Martini, which is presented in \autoref{results:umbrella}. However the reason could not have proven beyond doubt. In order to still perform reasonable simulations of multiple FAK an external force was applied to each FAK molecule. This is called stabilizing force in the following parts.\\
